test_output.txt
[baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
FAIL tests/server.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /Users/pushkarmishra/Documents/ResumeForge/ResumeForge/tests/setupTests.js:5
      await Promise.resolve().then(() => _interopRequireWildcard(require('@testing-library/jest-dom')));
      ^^^^^

    SyntaxError: await is only valid in async functions and the top level bodies of modules

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)

-------------------------------|---------|----------|---------|---------|-------------------
File                           | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------------------|---------|----------|---------|---------|-------------------
All files                      |       0 |        0 |       0 |       0 |                   
 ResumeForge                   |       0 |        0 |       0 |       0 |                   
  logger.js                    |       0 |        0 |       0 |       0 | 16-187            
  server.js                    |       0 |        0 |       0 |       0 | 30-26901          
 ResumeForge/lib               |       0 |        0 |       0 |       0 |                   
  buildMetadata.js             |       0 |        0 |       0 |       0 | 3-166             
  cloudfrontAssetCheck.js      |       0 |        0 |       0 |       0 | 3-896             
  cloudfrontAssetPrefixes.js   |       0 |        0 |       0 |       0 | 4-67              
  cloudfrontHealthCheck.js     |       0 |        0 |       0 |       0 | 4-120             
  handlebars.js                |       0 |      100 |       0 |       0 | 3-9               
  postDeploymentApiTests.js    |       0 |        0 |       0 |       0 | 4-93              
  retry.js                     |       0 |        0 |       0 |       0 | 1-172             
 ResumeForge/lib/cloudfront    |       0 |        0 |       0 |       0 |                   
  metadata.js                  |       0 |        0 |       0 |       0 | 3-217             
 ResumeForge/lib/deploy        |       0 |        0 |       0 |       0 |                   
  notifications.js             |       0 |        0 |       0 |       0 | 4-251             
 ResumeForge/lib/http          |       0 |        0 |       0 |       0 |                   
  parseEventBody.js            |       0 |        0 |       0 |       0 | 10-24             
 ResumeForge/lib/llm           |       0 |        0 |       0 |       0 |                   
  gemini.js                    |       0 |        0 |       0 |       0 | 5-254             
  templates.js                 |       0 |        0 |       0 |       0 | 1-109             
 ResumeForge/lib/logging       |       0 |        0 |       0 |       0 |                   
  attributes.js                |       0 |        0 |       0 |       0 | 2-195             
 ResumeForge/lib/observability |       0 |        0 |       0 |       0 |                   
  lambda.js                    |       0 |        0 |       0 |       0 | 7-984             
 ResumeForge/lib/pdf           |       0 |        0 |       0 |       0 |                   
  backstop.js                  |       0 |        0 |       0 |       0 | 3-169             
  index.js                     |       0 |        0 |       0 |       0 | 3-36              
  resume.js                    |       0 |        0 |       0 |       0 | 12-19             
  utils.js                     |       0 |        0 |       0 |       0 | 4-204             
 ResumeForge/lib/pdf/templates |       0 |        0 |       0 |       0 |                   
  2025.js                      |       0 |        0 |       0 |       0 | 11-1177           
 ResumeForge/lib/resume        |       0 |        0 |       0 |       0 |                   
  content.js                   |       0 |        0 |       0 |       0 | 8-1555            
  enhancement.js               |       0 |        0 |       0 |       0 | 8-445             
  jobEvaluation.js             |       0 |        0 |       0 |       0 | 9-120             
  parsing.js                   |       0 |        0 |       0 |       0 | 11-733            
  scoring.js                   |       0 |        0 |       0 |       0 | 14-819            
  skills.js                    |       0 |        0 |       0 |       0 | 8-143             
  utils.js                     |       0 |        0 |       0 |       0 | 11-18             
 ResumeForge/lib/scoring       |       0 |        0 |       0 |       0 |                   
  atsMetrics.js                |       0 |        0 |       0 |       0 | 1-956             
 ResumeForge/lib/static        |       0 |        0 |       0 |       0 |                   
  hashedIndexAssetRetention.js |       0 |        0 |       0 |       0 | 1-220             
  normalization.js             |       0 |        0 |       0 |       0 | 2-60              
 ResumeForge/lib/uploads       |       0 |        0 |       0 |       0 |                   
  metadata.js                  |       0 |        0 |       0 |       0 | 6-138             
  s3StreamingStorage.js        |       0 |        0 |       0 |       0 | 7-160             
-------------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        26.449 s
Ran all test suites matching /tests\/server.test.js/i.
Force exiting Jest: Have you considered using `--detectOpenHandles` to detect async operations that kept running after all tests finished?
